--- a/README.html
+++ b/README.html
@@ -1,4 +1,6 @@
-# <center>Advent of Code Repository
+<html>
+<body>
+<h1 align="center">Advent of Code Repository</h1>
 
 ## All Advent of Codes
 | Year               | Website link                             |
@@ -10,3 +12,5 @@
 
 <a href="https://www.google.com/" style="color: black; text-decoration: underline;text-decoration-style: dotted;">custom link</a>
 <a href="https://github.com/Gozrid" style="color:red">GitHub Profile</a>
+</body>
+</html>
