--- a/README.html
+++ b/README.html
@@ -1,16 +1,8 @@
 <html>
+<head>
+
+</head>
 <body>
-<h1 align="center">Advent of Code Repository</h1>
-
-## All Advent of Codes
-| Year               | Website link                             |
-|--------------------|------------------------------------------|
-| [2021](./AOC_2021) | [Website](https://adventofcode.com/2021) |
-| [2022](./AOC_2022) | [Website](https://adventofcode.com/2022) |
-
----
-
-<a href="https://www.google.com/" style="color: black; text-decoration: underline;text-decoration-style: dotted;">custom link</a>
-<a href="https://github.com/Gozrid" style="color:red">GitHub Profile</a>
+test
 </body>
 </html>
